--- a/host/package.json
+++ b/host/package.json
@@ -6,6 +6,7 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=8080 npx serve",
     "start": "webpack serve --open --mode development",
+    "start:codespace": "webpack serve --open --mode development --config webpack.config.codespace.js",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
   "license": "MIT",
