--- a/svelte-mf-app/remote/package.json
+++ b/svelte-mf-app/remote/package.json
@@ -17,6 +17,8 @@
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.17",
     "esbuild": "^0.20.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.33",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
