--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -6,19 +6,24 @@ on:
       - main
 
 jobs:
-  eslint:
+  setup:
+    name: Setup environment
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: 'Run ESLint: react -> remote'
-        uses: reviewdog/action-eslint@v1
+      - uses: actions/setup-node@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-review # Change reporter.
-          eslint_flags: 'react-mf-app/remote/src/'
+          node-version: '20'
+
+  svelte-remote:
+    name: Lint Svelte remote app
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - name: Linting
+        run: eslint svelte-mf-app/remote/src
+    
