--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -17,7 +17,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       - run: npm install eslint --global
+      - run: npm ci
 
       - name: Linting
         run: eslint svelte-mf-app/remote/src
