--- a/svelte-mf-app/remote/package.json
+++ b/svelte-mf-app/remote/package.json
@@ -15,6 +15,7 @@
     "@softarc/native-federation-esbuild": "^2.0.7",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
