--- a/svelte-mf-app/host/package.json
+++ b/svelte-mf-app/host/package.json
@@ -7,9 +7,13 @@
     "@softarc/native-federation-esbuild": "^2.0.7",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "css-loader": "^6.10.0",
     "esbuild": "^0.20.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.1.0",
     "svelte": "^4.2.8",
