Added Svelte host app linting workflow

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,3 +25,23 @@ jobs:
       - name: Linting
         working-directory: svelte-mf-app/remote
         run: eslint src
+
+  svelte-host:
+    name: Lint Svelte host app
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - run: npm install eslint --global
+      - name: Install dependencies
+        working-directory: svelte-mf-app/host
+        run: npm install
+
+      - name: Linting
+        working-directory: svelte-mf-app/host
+        run: eslint src
