--- a/svelte-mf-app/originjs-plugin/remote/package.json
+++ b/svelte-mf-app/originjs-plugin/remote/package.json
@@ -10,6 +10,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
     "@typescript-eslint/parser": "^7.1.1",
