--- a/.github/workflows/eslint-single-spa.yml
+++ b/.github/workflows/eslint-single-spa.yml
@@ -8,8 +8,8 @@ on:
       - 'single-spa/**'
 
 jobs:
-  react-remote:
-    name: Lint remote app
+  counter-app:
+    name: Lint counter app
     runs-on: ubuntu-latest
 
     steps:
@@ -28,8 +28,8 @@ jobs:
         working-directory: single-spa/counter
         run: npm run lint
 
-  react-host:
-    name: Lint host app
+  root-config:
+    name: Lint root-config
     runs-on: ubuntu-latest
 
     steps:
@@ -46,4 +46,24 @@ jobs:
 
       - name: Linting
         working-directory: single-spa/root-config
+        run: npm run lint
+
+  header-app:
+    name: Lint header app
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - run: npm install eslint --global
+      - name: Install dependencies
+        working-directory: single-spa/header
+        run: npm install
+
+      - name: Linting
+        working-directory: single-spa/header
         run: npm run lint
