--- a/single-spa/header/.eslintrc
+++ b/single-spa/header/.eslintrc
@@ -3,5 +3,8 @@
     "ts-react-important-stuff",
     "plugin:prettier/recommended"
   ],
-  "parser": "@babel/eslint-parser"
+  "parser": "@babel/eslint-parser",
+  "rules": {
+    "no-console": "warn"
+  }
 }
